Analyze.py command line arguments

--- a/Likelihood.ipynb
+++ b/Likelihood.ipynb
@@ -313,8 +313,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6e67c71-d1b4-459f-8374-43514d799e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool('pdwa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b606c33e-76dd-4a7c-8e66-cc47de02b075",
    "metadata": {},
    "outputs": [],
    "source": []
