first likelihood implementation

--- a/Fit.ipynb
+++ b/Fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96bd34bc-80e0-44c6-8720-3c02a6a67002",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4c0e71a2-1534-4d5d-b72c-4e28b12fe02a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b13001ec-dc21-41ce-8e94-b76ef345d0f5",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dbf2077b-1402-4de2-8f2b-a7c832458905",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d7492123-f0d0-467e-a457-f787092f0bd7",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ea602742-3aa1-4a67-826a-f81ff00fb6d8",
    "metadata": {
     "tags": []
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "74e578ff-b308-4bfb-b34f-8278446739a9",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "78d36a3f-1c63-4191-9b9e-99bf6dbbb936",
    "metadata": {
     "tags": []
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f326731c-3a68-4035-b85c-a67720b75d9d",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f61cb1f6-8bbf-434f-a826-98ff0a38f8de",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2a0b08ff-4f39-487c-a954-686a6491bcb6",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c1fca66a-e23e-4e7c-940a-f79884553e03",
    "metadata": {},
    "outputs": [],
@@ -261,14 +261,14 @@
     "    data_mpv, xdata, ydata = generate_one_freq_vs_dedx(bd, num_dedx_bins)\n",
     "    fit_params, xfit, yfit = generate_fit(xdata, ydata)\n",
     "    mpv, eta, sigma, A = fit_params\n",
-    "    fit_data_dict.append({'mpv': mpv, 'eta': eta, 'sigma': sigma, 'A': A, 'e_range': (bin_edges[i], bin_edges[i+1])}) \n",
+    "    fit_data_dict.append({'mpv': mpv, 'eta': eta, 'sigma': sigma, 'A': A, 'e_min': bin_edges[i], 'e_max': bin_edges[i+1]}) \n",
     "\n",
     "fit_data = pd.DataFrame.from_dict(fit_data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1019e937-2f1e-4514-b9eb-9c36e5d29a67",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,8 @@
        "      <th>eta</th>\n",
        "      <th>sigma</th>\n",
        "      <th>A</th>\n",
-       "      <th>e_range</th>\n",
+       "      <th>e_min</th>\n",
+       "      <th>e_max</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -307,7 +308,8 @@
        "      <td>0.120967</td>\n",
        "      <td>0.038455</td>\n",
        "      <td>3.284104</td>\n",
-       "      <td>(0.1, 0.14125375446227545)</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.141254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -315,7 +317,8 @@
        "      <td>0.109516</td>\n",
        "      <td>0.121318</td>\n",
        "      <td>73.049835</td>\n",
-       "      <td>(0.14125375446227545, 0.19952623149688797)</td>\n",
+       "      <td>0.141254</td>\n",
+       "      <td>0.199526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -323,7 +326,8 @@
        "      <td>0.112641</td>\n",
        "      <td>0.108565</td>\n",
        "      <td>830.585409</td>\n",
-       "      <td>(0.19952623149688797, 0.28183829312644537)</td>\n",
+       "      <td>0.199526</td>\n",
+       "      <td>0.281838</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -331,7 +335,8 @@
        "      <td>0.093731</td>\n",
        "      <td>0.115615</td>\n",
        "      <td>3308.998210</td>\n",
-       "      <td>(0.28183829312644537, 0.3981071705534972)</td>\n",
+       "      <td>0.281838</td>\n",
+       "      <td>0.398107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -339,7 +344,8 @@
        "      <td>0.094242</td>\n",
        "      <td>0.118135</td>\n",
        "      <td>12324.856562</td>\n",
-       "      <td>(0.3981071705534972, 0.5623413251903491)</td>\n",
+       "      <td>0.398107</td>\n",
+       "      <td>0.562341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -347,7 +353,8 @@
        "      <td>0.092866</td>\n",
        "      <td>0.119586</td>\n",
        "      <td>32245.803381</td>\n",
-       "      <td>(0.5623413251903491, 0.7943282347242814)</td>\n",
+       "      <td>0.562341</td>\n",
+       "      <td>0.794328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -355,7 +362,8 @@
        "      <td>0.089099</td>\n",
        "      <td>0.118795</td>\n",
        "      <td>58275.495991</td>\n",
-       "      <td>(0.7943282347242814, 1.1220184543019636)</td>\n",
+       "      <td>0.794328</td>\n",
+       "      <td>1.122018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -363,7 +371,8 @@
        "      <td>0.089481</td>\n",
        "      <td>0.119375</td>\n",
        "      <td>77364.559261</td>\n",
-       "      <td>(1.1220184543019636, 1.5848931924611134)</td>\n",
+       "      <td>1.122018</td>\n",
+       "      <td>1.584893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -371,7 +380,8 @@
        "      <td>0.089334</td>\n",
        "      <td>0.120932</td>\n",
        "      <td>96775.731705</td>\n",
-       "      <td>(1.5848931924611134, 2.238721138568339)</td>\n",
+       "      <td>1.584893</td>\n",
+       "      <td>2.238721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -379,7 +389,8 @@
        "      <td>0.090370</td>\n",
        "      <td>0.122569</td>\n",
        "      <td>107589.581271</td>\n",
-       "      <td>(2.238721138568339, 3.1622776601683795)</td>\n",
+       "      <td>2.238721</td>\n",
+       "      <td>3.162278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -387,7 +398,8 @@
        "      <td>0.091114</td>\n",
        "      <td>0.121641</td>\n",
        "      <td>108970.145337</td>\n",
-       "      <td>(3.1622776601683795, 4.46683592150963)</td>\n",
+       "      <td>3.162278</td>\n",
+       "      <td>4.466836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -395,7 +407,8 @@
        "      <td>0.090891</td>\n",
        "      <td>0.119944</td>\n",
        "      <td>110269.285437</td>\n",
-       "      <td>(4.46683592150963, 6.30957344480193)</td>\n",
+       "      <td>4.466836</td>\n",
+       "      <td>6.309573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -403,7 +416,8 @@
        "      <td>0.091356</td>\n",
        "      <td>0.120900</td>\n",
        "      <td>92712.805590</td>\n",
-       "      <td>(6.30957344480193, 8.912509381337454)</td>\n",
+       "      <td>6.309573</td>\n",
+       "      <td>8.912509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -411,7 +425,8 @@
        "      <td>0.090317</td>\n",
        "      <td>0.120677</td>\n",
        "      <td>71752.608500</td>\n",
-       "      <td>(8.912509381337454, 12.589254117941675)</td>\n",
+       "      <td>8.912509</td>\n",
+       "      <td>12.589254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -419,7 +434,8 @@
        "      <td>0.090417</td>\n",
        "      <td>0.121029</td>\n",
        "      <td>56386.281304</td>\n",
-       "      <td>(12.589254117941675, 17.78279410038923)</td>\n",
+       "      <td>12.589254</td>\n",
+       "      <td>17.782794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -427,7 +443,8 @@
        "      <td>0.093296</td>\n",
        "      <td>0.118697</td>\n",
        "      <td>41568.155317</td>\n",
-       "      <td>(17.78279410038923, 25.118864315095795)</td>\n",
+       "      <td>17.782794</td>\n",
+       "      <td>25.118864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -435,7 +452,8 @@
        "      <td>0.090392</td>\n",
        "      <td>0.121011</td>\n",
        "      <td>24220.944910</td>\n",
-       "      <td>(25.118864315095795, 35.481338923357534)</td>\n",
+       "      <td>25.118864</td>\n",
+       "      <td>35.481339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -443,7 +461,8 @@
        "      <td>0.090030</td>\n",
        "      <td>0.119981</td>\n",
        "      <td>18703.958528</td>\n",
-       "      <td>(35.481338923357534, 50.118723362727195)</td>\n",
+       "      <td>35.481339</td>\n",
+       "      <td>50.118723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -451,7 +470,8 @@
        "      <td>0.090448</td>\n",
        "      <td>0.119246</td>\n",
        "      <td>11156.974740</td>\n",
-       "      <td>(50.118723362727195, 70.79457843841381)</td>\n",
+       "      <td>50.118723</td>\n",
+       "      <td>70.794578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -459,56 +479,35 @@
        "      <td>0.084971</td>\n",
        "      <td>0.129440</td>\n",
        "      <td>6309.483209</td>\n",
-       "      <td>(70.79457843841381, 100.0)</td>\n",
+       "      <td>70.794578</td>\n",
+       "      <td>100.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mpv       eta     sigma              A  \\\n",
-       "0   1.727927  0.120967  0.038455       3.284104   \n",
-       "1   1.857183  0.109516  0.121318      73.049835   \n",
-       "2   1.823840  0.112641  0.108565     830.585409   \n",
-       "3   1.797432  0.093731  0.115615    3308.998210   \n",
-       "4   1.799635  0.094242  0.118135   12324.856562   \n",
-       "5   1.803524  0.092866  0.119586   32245.803381   \n",
-       "6   1.798343  0.089099  0.118795   58275.495991   \n",
-       "7   1.810452  0.089481  0.119375   77364.559261   \n",
-       "8   1.832099  0.089334  0.120932   96775.731705   \n",
-       "9   1.853082  0.090370  0.122569  107589.581271   \n",
-       "10  1.869164  0.091114  0.121641  108970.145337   \n",
-       "11  1.882008  0.090891  0.119944  110269.285437   \n",
-       "12  1.893676  0.091356  0.120900   92712.805590   \n",
-       "13  1.901528  0.090317  0.120677   71752.608500   \n",
-       "14  1.906961  0.090417  0.121029   56386.281304   \n",
-       "15  1.913260  0.093296  0.118697   41568.155317   \n",
-       "16  1.912814  0.090392  0.121011   24220.944910   \n",
-       "17  1.912285  0.090030  0.119981   18703.958528   \n",
-       "18  1.908563  0.090448  0.119246   11156.974740   \n",
-       "19  1.913944  0.084971  0.129440    6309.483209   \n",
-       "\n",
-       "                                       e_range  \n",
-       "0                   (0.1, 0.14125375446227545)  \n",
-       "1   (0.14125375446227545, 0.19952623149688797)  \n",
-       "2   (0.19952623149688797, 0.28183829312644537)  \n",
-       "3    (0.28183829312644537, 0.3981071705534972)  \n",
-       "4     (0.3981071705534972, 0.5623413251903491)  \n",
-       "5     (0.5623413251903491, 0.7943282347242814)  \n",
-       "6     (0.7943282347242814, 1.1220184543019636)  \n",
-       "7     (1.1220184543019636, 1.5848931924611134)  \n",
-       "8      (1.5848931924611134, 2.238721138568339)  \n",
-       "9      (2.238721138568339, 3.1622776601683795)  \n",
-       "10      (3.1622776601683795, 4.46683592150963)  \n",
-       "11        (4.46683592150963, 6.30957344480193)  \n",
-       "12       (6.30957344480193, 8.912509381337454)  \n",
-       "13     (8.912509381337454, 12.589254117941675)  \n",
-       "14     (12.589254117941675, 17.78279410038923)  \n",
-       "15     (17.78279410038923, 25.118864315095795)  \n",
-       "16    (25.118864315095795, 35.481338923357534)  \n",
-       "17    (35.481338923357534, 50.118723362727195)  \n",
-       "18     (50.118723362727195, 70.79457843841381)  \n",
-       "19                  (70.79457843841381, 100.0)  "
+       "         mpv       eta     sigma              A      e_min       e_max\n",
+       "0   1.727927  0.120967  0.038455       3.284104   0.100000    0.141254\n",
+       "1   1.857183  0.109516  0.121318      73.049835   0.141254    0.199526\n",
+       "2   1.823840  0.112641  0.108565     830.585409   0.199526    0.281838\n",
+       "3   1.797432  0.093731  0.115615    3308.998210   0.281838    0.398107\n",
+       "4   1.799635  0.094242  0.118135   12324.856562   0.398107    0.562341\n",
+       "5   1.803524  0.092866  0.119586   32245.803381   0.562341    0.794328\n",
+       "6   1.798343  0.089099  0.118795   58275.495991   0.794328    1.122018\n",
+       "7   1.810452  0.089481  0.119375   77364.559261   1.122018    1.584893\n",
+       "8   1.832099  0.089334  0.120932   96775.731705   1.584893    2.238721\n",
+       "9   1.853082  0.090370  0.122569  107589.581271   2.238721    3.162278\n",
+       "10  1.869164  0.091114  0.121641  108970.145337   3.162278    4.466836\n",
+       "11  1.882008  0.090891  0.119944  110269.285437   4.466836    6.309573\n",
+       "12  1.893676  0.091356  0.120900   92712.805590   6.309573    8.912509\n",
+       "13  1.901528  0.090317  0.120677   71752.608500   8.912509   12.589254\n",
+       "14  1.906961  0.090417  0.121029   56386.281304  12.589254   17.782794\n",
+       "15  1.913260  0.093296  0.118697   41568.155317  17.782794   25.118864\n",
+       "16  1.912814  0.090392  0.121011   24220.944910  25.118864   35.481339\n",
+       "17  1.912285  0.090030  0.119981   18703.958528  35.481339   50.118723\n",
+       "18  1.908563  0.090448  0.119246   11156.974740  50.118723   70.794578\n",
+       "19  1.913944  0.084971  0.129440    6309.483209  70.794578  100.000000"
       ]
      },
      "metadata": {},
@@ -521,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4afb3d5e-e117-49a6-aff6-7656f7e837f8",
    "metadata": {},
    "outputs": [],
