analysis run with pitch

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fc61c834048>,\n",
-       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fc61c834358>]"
+       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fe690fcab38>,\n",
+       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fe6823c7fd0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,6 +364,7 @@
     "    #--------------------------------------Instantiate principal data arrays---------------------------------------\n",
     "    dedxs = []\n",
     "    es = []\n",
+    "    pitches = []\n",
     "\n",
     "    #-----------------------------------------Initialize relevant raw data-----------------------------------------\n",
     "    e_losses_per_step = df['dedx_y']\n",
@@ -419,6 +420,7 @@
     "            else:\n",
     "                es.append(e)\n",
     "                dedxs.append(dedx)\n",
+    "                pitches.append(lovercostheta)\n",
     "                e -= de                                  # Lower energy accordingly\n",
     "                prev_range = rrange[i]                   # Update prev_range\n",
     "\n",
@@ -429,12 +431,12 @@
     "    print(f'Done! Analysis time: {int(t//60)}m {t%60:0.1f}s')  \n",
     "    print_debug_data()\n",
     "    \n",
-    "    return es, dedxs"
+    "    return es, dedxs, pitches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -443,25 +445,25 @@
      "text": [
       "Analyzing...\n",
       "100%       \n",
-      "Done! Analysis time: 3m 31.3s\n",
+      "Done! Analysis time: 1m 8.7s\n",
       "Impurities: 1492\n",
       "Muons: 2370\n",
       "Antimuons: 2431\n",
-      "Particles partially skipped: 1292\n",
-      "Total skipped data points: 183454\n",
+      "Particles partially skipped: 2979\n",
+      "Total skipped data points: 397859\n",
       "Particles with a high dE data point: 3\n",
-      "Particles with a high dEdx data point: 159\n",
-      "Particles with a high pitch data point: 1133\n"
+      "Particles with a high dEdx data point: 145\n",
+      "Particles with a high pitch data point: 2836\n"
      ]
     }
    ],
    "source": [
-    "es, dedxs = analyze_data(df)"
+    "es, dedxs, pitches = analyze_data(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,6 +475,7 @@
     "            writer = csv.writer(save)\n",
     "            writer.writerow(es)\n",
     "            writer.writerow(dedxs)\n",
+    "            writer.writerow(pitches)\n",
     "        print(f\"saved to {path}.\")"
    ]
   },
