Fit.ipynb pitch binning

--- a/Likelihood.ipynb
+++ b/Likelihood.ipynb
@@ -489,6 +489,16 @@
    "source": [
     "like_data.to_csv(r'./data/stat_binned_likelihood_data.csv', index=False, header=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4739ad70-323a-4408-9dbd-4ab64e0a5a51",
+   "metadata": {},
+   "source": [
+    "- Cut off the likelihood for high / problematic dedx values (only focus on values located in the region around the peak)\n",
+    "- Look into developing analytic likelihood based on the mpv fit. This would most likely have to take the pitch into account \n",
+    "- See if single muon fit mpvs have any correlation with fit mpvs. Build likelihood from that alone."
+   ]
   }
  ],
  "metadata": {
