lowpitch reconstrcution run

--- a/Likelihood.ipynb
+++ b/Likelihood.ipynb
@@ -352,11 +352,11 @@
    "metadata": {},
    "source": [
     "The likelihood will only depend on the dedxs and the landau fit parameters. The true energies are calculated for reference. For a given dedx ($x_i$) the probability that it corresponds to a measurement from energy bin $j$ is given by:\n",
-    "$$p_j(x_i)=\\frac{f_j(x_i)}{\\sum_{k}f_k(x_i)}$$\n",
-    "where $f_j$ is the langau pdf associated with energy bin $j$ and the denominator is the sum of the langau pdfs at $x_i$ over all energy bins. **Assuming the $x_i$ are independent (which is wrong)**, the likelihood that all the data $x_i$ correspond to energy bin $j$ is:\n",
-    "$$\\mathscr{L}_j=\\prod_i\\frac{f_j(x_i)}{\\sum_k f_k(x_i)}$$\n",
+    "$$p_j(x_i)=\\frac{f(x_i;\\vec{\\theta}_j)}{\\sum_{k}f(x_i;\\vec{\\theta}_k)}$$\n",
+    "where $f$ is the langau pdf and the denominator is the sum of the langau pdfs at $x_i$ over all energy bins. **Assuming the $x_i$ are independent (which is wrong)**, the likelihood that all the data $x_i$ correspond to energy bin with parameters $\\vec{\\theta}_j$ is:\n",
+    "$$\\mathscr{L}(\\vec{\\theta}_j)=\\prod_i\\frac{f(x_i;\\vec{\\theta}_j)}{\\sum_k f(x_i; \\vec{\\theta}_k)}$$\n",
     "We use the log-likelihood:\n",
-    "$$\\log\\mathscr{L}_j=\\sum_i\\left[\\log f_j(x_i)-\\log \\sum_k f_k(x_i)\\right]$$\n",
+    "$$\\log\\mathscr{L}(\\vec{\\theta}_j)=\\sum_i\\left[\\log f(x_i;\\vec{\\theta}_j)-\\log \\sum_k f(x_i; \\vec{\\theta}_k)\\right]$$\n",
     "This uses an incorrect assumption that the $x_i$ are all independent. In principle, the $x_i$ should follow the Bethe-Bloch curve as each subsequent $x_i$ corresponds to an energy loss from a muon of slightly lower kinetic energy. Corrections for this effect will be implemented later. Then the matter of maximizing the likelihood is akin to selecting energy bin $j$ with the highest $\\mathscr{L}$."
    ]
   },
@@ -489,6 +489,64 @@
    "source": [
     "like_data.to_csv(r'./data/stat_binned_likelihood_data.csv', index=False, header=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9fad6f5-195f-4a09-a8ab-6fa855d4db35",
+   "metadata": {},
+   "source": [
+    "## Analytic Likelihood\n",
+    "\n",
+    "I will attempt to construct an analytic likelihood function based on the theoretical MPV values found in `Fit.ipynb` as well as the assumption that the Langau spreads $\\eta$ and $\\sigma$ are independent of muon energy (which they are, for the most part, although I am not sure of the theoretical prediction). The only value that will end up depending on the energy of the incoming muon is the MPV, which will be the parameter we minimize over. We must assume some uniform $\\sigma$ and $\\eta$, and I will just select the quadrature means of the fixed-width langau fits from before. I am not certain that this choice is robust, however perhaps there is some theory to work with for these values later down the line.\n",
+    "\n",
+    "$$\\mathscr{L}_i=f\\left(x_i; \\frac{\\Delta_p}{dx}(E, \\Delta p_i), \\eta(E, \\Delta p_i), \\sigma(E, \\Delta p_i)\\right)$$\n",
+    "where $\\Delta p=\\frac{0.3\\,\\text{cm}}{\\cos(\\gamma)}$ is the pitch, $E$ is the true energy, and $\\frac{\\Delta_p}{dx}, \\eta, \\sigma$ are the MPV, Landau FWHM, and Gaussian width of the Langau. We expect that the $E$ should also be subscripted $i$ as the true energy changes with each energy loss but for now we continue to approximate the true energy as constant:\n",
+    "$$-\\ln(\\mathscr{L}(E))=-\\sum_i \\ln\\left(f\\left[x_i; \\frac{\\Delta_p}{dx}(E, \\Delta p_i), \\eta(E, \\Delta p_i), \\sigma(E, \\Delta p_i)\\right]\\right)$$\n",
+    "I imagine that this is highly computationally expensive --- there may be some trick to lower the computational difficulty by utilizing the Laplace Transform (since $f=L\\{s^s\\}$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6041bb24-94ee-4ff4-9da2-cab6a8a2e73e",
+   "metadata": {},
+   "source": [
+    "Load stand-in $\\eta$, $\\sigma$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7d0d4a59-27a6-4014-9cb1-09b5eb6332d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "fit_data_loc = r'./data/stat_fixedwidth_fit_data_full.csv'\n",
+    "fitdf = pd.read_csv(fit_data_loc)\n",
+    "eta = fitdf.eta[0]\n",
+    "sig = fitdf.sigma[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bc581b1d-679a-48c2-8cf4-e793031a7171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.theory import *\n",
+    "\n",
+    "def analnegloglike(e, dedxs, pitches=[], eta=eta, sig=sig):\n",
+    "    mpv = dpdx(e-Mmu, thickness , Mmu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b48870-49ab-4479-a5cb-69641b420b89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
