fixed bug in analysis script

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fe690fcab38>,\n",
-       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fe6823c7fd0>]"
+       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7f52267a9c50>,\n",
+       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7f52267a9d30>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,48 +101,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tag_for_removal(slimmerdf):\n",
-    "    # Must match the format of slimmer_variables above, all values in centimeters\n",
-    "    dimensions = [0, -116, 0, 256, 116, 1036]\n",
-    "\n",
-    "    idxs_to_remove = []\n",
-    "    pcnt = 0.01\n",
-    "    threshold = [(dimensions[3]-dimensions[0])*pcnt, (dimensions[4]-dimensions[1])*pcnt, (dimensions[5]-dimensions[2])*pcnt]       # Arbitrary threshold; within 3cm of boundary counts as entering or leaving the detector\n",
-    "\n",
-    "    for particle in slimmerdf.index:\n",
-    "        start_end_vals, e, pdg = np.split(slimmerdf.iloc[particle].values, [6,7])\n",
-    "        enters = False\n",
-    "        exits = False\n",
-    "\n",
-    "        for j in range(len(dimensions)):\n",
-    "\n",
-    "            val = start_end_vals[j]\n",
-    "            start = dimensions[j % 3]\n",
-    "            end = dimensions[j % 3 + 3]\n",
-    "\n",
-    "            if abs(val - start) < threshold[j % 3]:\n",
-    "                enters = True\n",
-    "                # print(\"particle\", particle, \"enters in\", j%3)\n",
-    "            elif abs(val - end) < threshold[j % 3]:\n",
-    "                exits = True\n",
-    "                # print(\"particle\", particle, \"exits in\", j%3)\n",
-    "\n",
-    "        # Checks if the particle enters and exits, and also that the particle has a reasonable energy and is a muon\n",
-    "        if not (enters and exits) or e[0] <= 0 or e[0] >= 300 or abs(pdg[0]) != 13:\n",
-    "            idxs_to_remove.append(particle)\n",
-    "\n",
-    "\n",
-    "    print('Will remove', len(idxs_to_remove), 'particles')\n",
-    "    \n",
-    "    return idxs_to_remove\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -155,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -163,15 +121,30 @@
      "output_type": "stream",
      "text": [
       "Preparing Slimming Mask...\n",
-      "Will remove 5129 particles\n"
+      "Will remove 1121 particles\n"
      ]
     }
    ],
    "source": [
+    "def distance_to_edge(r):\n",
+    "    dimensions = np.array([[0, 256], [-116,116], [0,1036]])\n",
+    "    return  np.min(np.abs(dimensions - r[:, np.newaxis]))\n",
+    "\n",
     "print(\"Preparing Slimming Mask...\")\n",
     "slimmerdf = tree.arrays(slimmer_variables, library='pd')\n",
-    "idxs_to_remove = tag_for_removal(slimmerdf)"
+    "\n",
+    "start_dists, end_dists = np.array([ [distance_to_edge(r[:3]), distance_to_edge(r[3:6])] for _, r in slimmerdf.iterrows() ]).T\n",
+    "energy_mask = (slimmerdf.backtracked_e > 0) & (slimmerdf.backtracked_e < 300) & (np.abs(slimmerdf.backtracked_pdg) == 13)\n",
+    "mask = (start_dists < 2) & (end_dists < 2) & energy_mask\n",
+    "print(\"Will remove\", np.sum(~mask), \"particles\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,14 +183,14 @@
     "\n",
     "# Slim according to mask\n",
     "# part_df = part_df.loc[~mask]\n",
-    "df = df.loc[~mask, :]\n",
+    "df = df.loc[mask, :]\n",
     "\n",
     "# This loop loads in the next column of the dataframe, slims it, and appends it to df\n",
     "for name in variables[1:]:\n",
     "    next_col = tree.arrays(name, library='pd')\n",
     "    print(\"Loaded\", name, \"data...\")\n",
     "    size += sys.getsizeof(next_col[name])\n",
-    "    next_col = next_col.loc[~mask, :]\n",
+    "    next_col = next_col.loc[mask, :]\n",
     "    df = df.join(next_col, on=['entry', 'subentry'])\n",
     "\n",
     "print(\"Generated!\")\n",
