final update to analyze bugfix

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -63,8 +63,8 @@
     {
      "data": {
       "text/plain": [
-       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7f52267a9c50>,\n",
-       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7f52267a9d30>]"
+       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fbfbc4c1080>,\n",
+       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fbfbc4c13c8>]"
       ]
      },
      "execution_count": 4,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -135,20 +135,14 @@
     "\n",
     "start_dists, end_dists = np.array([ [distance_to_edge(r[:3]), distance_to_edge(r[3:6])] for _, r in slimmerdf.iterrows() ]).T\n",
     "energy_mask = (slimmerdf.backtracked_e > 0) & (slimmerdf.backtracked_e < 300) & (np.abs(slimmerdf.backtracked_pdg) == 13)\n",
-    "mask = (start_dists < 2) & (end_dists < 2) & energy_mask\n",
-    "print(\"Will remove\", np.sum(~mask), \"particles\")"
+    "mask = ((start_dists < 2) & (end_dists < 2) & energy_mask).to_numpy()\n",
+    "print(\"Will remove\", np.sum(~mask), \"particles\")\n",
+    "mask = mask[df.index.get_level_values(0)] # Broadcast to multiindex shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -157,11 +151,12 @@
      "text": [
       "Generating Principal Dataframe...\n",
       "Loaded dedx_y data...\n",
+      "[ True  True  True ...  True  True  True]\n",
       "Loaded rr_y data...\n",
       "Loaded pitch_y data...\n",
       "Generated!\n",
       "Original Size: 45.395421 MB\n",
-      "Slimmed Size: 14.869263 MB\n"
+      "Slimmed Size: 26.465695 MB\n"
      ]
     }
    ],
@@ -179,7 +174,6 @@
     "size = sys.getsizeof(df)\n",
     "\n",
     "# Slim according to mask\n",
-    "# part_df = part_df.loc[~mask]\n",
     "df = df.loc[mask, :]\n",
     "\n",
     "# This loop loads in the next column of the dataframe, slims it, and appends it to df\n",
