final final update to analyze bugfix

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -136,8 +136,7 @@
     "start_dists, end_dists = np.array([ [distance_to_edge(r[:3]), distance_to_edge(r[3:6])] for _, r in slimmerdf.iterrows() ]).T\n",
     "energy_mask = (slimmerdf.backtracked_e > 0) & (slimmerdf.backtracked_e < 300) & (np.abs(slimmerdf.backtracked_pdg) == 13)\n",
     "mask = ((start_dists < 2) & (end_dists < 2) & energy_mask).to_numpy()\n",
-    "print(\"Will remove\", np.sum(~mask), \"particles\")\n",
-    "mask = mask[df.index.get_level_values(0)] # Broadcast to multiindex shape"
+    "print(\"Will remove\", np.sum(~mask), \"particles\")"
    ]
   },
   {
@@ -174,6 +173,7 @@
     "size = sys.getsizeof(df)\n",
     "\n",
     "# Slim according to mask\n",
+    "mask = mask[df.index.get_level_values(0)] # Broadcast to multiindex shape\n",
     "df = df.loc[mask, :]\n",
     "\n",
     "# This loop loads in the next column of the dataframe, slims it, and appends it to df\n",
